# QC

./: DOCUMENTATION_INDEX.md  FINAL_STATUS.md  IMPLEMENTATION_REPORT.md  README.md  RUN_APP.bat  TODO.md  user_list.csv
nsis/: CableQC System.lnk
nsis/New Version/: Motivation Letter.docx  README_TESTING.md  SEND_MARKING_FEATURE_README.md  TASK_REPORT.md  TESTING_GUIDE.md  VERIFICATION_REPORT.md  user_list.csv
nsis/New Version/CableQC/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
nsis/New Version/CableQC/scripts/: run-with-public-registry.mjs
nsis/New Version/CableQC/src/: App.tsx  index.css  main.tsx
nsis/New Version/CableQC/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
nsis/New Version/CableQC/src-tauri/assets/: qr_test1.tspl  qr_test2.tspl  qr_test3.tspl  ticket.tspl  ticket_test.tspl
nsis/New Version/CableQC/src-tauri/src/: camera.rs  logging.rs  main.rs  marker_printing.rs  printing.rs
nsis/New Version/CableQC/src/components/: AppHeader.tsx  AppSidebar.tsx  DepartmentCallButtons.tsx  LogoutConfirmDialog.tsx  StatusBadge.tsx
nsis/New Version/CableQC/src/context/: AppFlowContext.tsx  PrinterConfigContext.test.tsx  PrinterConfigContext.tsx  QualityAgentContext.tsx
nsis/New Version/CableQC/src/hooks/: useLogoutAction.ts  useLogoutDialog.ts  useMarkingPrinter.ts
nsis/New Version/CableQC/src/lib/: api.ts  featureFlags.ts  types.ts
nsis/New Version/CableQC/src/pages/: Dashboard.format.test.tsx  Dashboard.tsx  History.test.tsx  (+15 more)
nsis/To Do/: Nouveau Document texte.txt
(+31 files in other folders)
