[package]
name = "cableqc-system"
version = "0.1.0"
description = "CableQC System desktop console powered by Tauri"
authors = ["CableQC System Team"]
default-run = "cableqc-system"
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "fs-read-file", "fs-write-file", "dialog-all", "path-all", "shell-open"] }
tokio = { version = "1", features = ["net", "io-util", "time"] }
dotenvy = "0.15"
mysql = "26.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
csv = "1.3"
hostname = "0.3"
thiserror = "1.0"
regex = "1.10"
once_cell = "1.18"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
qrcode = { version = "0.14", features = ["image"] }
printpdf = { version = "0.8", features = ["png"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"
local-ip-address = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_Printing", "Win32_Security"] }
